force-app/main/default/objects/Fila_sales__c/Fila_sales__c.object-meta.xml
<CustomObject>
    <description>objeto criado para armazenar dados da fila do sap</description>
    <label>Fila Sale</label>
    <nameField>
        <label>Nome da fila</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filas Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>