force-app/main/default/objects/Fila_sales__c/fields/INTEGRADOSAP__c.field-meta.xml
<CustomField>
    <fullName>INTEGRADOSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE FALSE</description>
    <label>INTEGRADOSAP</label>
    <type>Checkbox</type>
</CustomField>