force-app/main/default/objects/Fila_sales__c/fields/ITEMCODESAP__c.field-meta.xml
<CustomField>
    <fullName>ITEMCODESAP__c</fullName>
    <description>Item code sap</description>
    <inlineHelpText>Item code sap</inlineHelpText>
    <label>ITEMCODESAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>