force-app/main/default/objects/Fila_sales__c/fields/WHSCODESAP__c.field-meta.xml
<CustomField>
    <fullName>WHSCODESAP__c</fullName>
    <description>CODIGO DO DEPOSITO SAP</description>
    <inlineHelpText>CODIGO DO DEPOSITO SAP</inlineHelpText>
    <label>WHSCODESAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>